--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebMap</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
+     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
+     <style>
+        #map { height:700px}
+
+     </style>
 </head>
 <body>
+    <div id="map"></div>
+
+    <script>
+         let map = L.map('map').setView([37.09024, -95.712891], 5);
+
+        L.tileLayer('https://api.mapbox.com/styles/v1/{username}/{style_id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+            username: 'setkhaing',
+            style_id: 'clvxuxs6702c201oc4nu2hdq9',
+            accessToken: 'pk.eyJ1Ijoic2V0a2hhaW5nIiwiYSI6ImNqNTUxaTB6OTA3NXMyd3VnOTEyaGx3OHcifQ.iDkQO3jCowF5wjMG93eRuw',
+            attribution: '&copy; <a href="https://www.mapbox.com/about/maps/">Mapbox</a>'
+    }).addTo(map);
     
+
+    </script>
 </body>
 </html>
+
