--- a/index.html
+++ b/index.html
@@ -1,35 +1,355 @@
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebMap</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-     crossorigin=""/>
-     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""></script>
-     <style>
-        #map { height:700px}
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <link rel="stylesheet" href="css/leaflet.css">
+        <link rel="stylesheet" href="css/L.Control.Layers.Tree.css">
+        <link rel="stylesheet" href="css/L.Control.Locate.min.css">
+        <link rel="stylesheet" href="css/qgis2web.css">
+        <link rel="stylesheet" href="css/fontawesome-all.min.css">
+        <style>
+        html, body, #map {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
+        }
+        </style>
+        <title></title>
+    </head>
+    <body>
+        <div id="map">
+        </div>
+        <script src="js/qgis2web_expressions.js"></script>
+        <script src="js/leaflet.js"></script>
+        <script src="js/L.Control.Layers.Tree.min.js"></script>
+        <script src="js/L.Control.Locate.min.js"></script>
+        <script src="js/leaflet-svg-shape-markers.min.js"></script>
+        <script src="js/leaflet.rotatedMarker.js"></script>
+        <script src="js/leaflet.pattern.js"></script>
+        <script src="js/leaflet-hash.js"></script>
+        <script src="js/Autolinker.min.js"></script>
+        <script src="js/rbush.min.js"></script>
+        <script src="js/labelgun.min.js"></script>
+        <script src="js/labels.js"></script>
+        <script src="data/Epi_Hlaingtharyar_mok_1.js"></script>
+        <script src="data/HF_Hlaingtharyar_2.js"></script>
+        <script>
+        var highlightLayer;
+        function highlightFeature(e) {
+            highlightLayer = e.target;
 
-     </style>
-</head>
-<body>
-    <div id="map"></div>
+            if (e.target.feature.geometry.type === 'LineString' || e.target.feature.geometry.type === 'MultiLineString') {
+              highlightLayer.setStyle({
+                color: '#ffff00',
+              });
+            } else {
+              highlightLayer.setStyle({
+                fillColor: '#ffff00',
+                fillOpacity: 1
+              });
+            }
+        }
+        var map = L.map('map', {
+            zoomControl:true, maxZoom:28, minZoom:1
+        }).fitBounds([[16.81861126047508,95.97998327954026],[16.917066669985307,96.1908257386101]]);
+        var hash = new L.Hash(map);
+        map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
+        var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
+        function removeEmptyRowsFromPopupContent(content, feature) {
+         var tempDiv = document.createElement('div');
+         tempDiv.innerHTML = content;
+         var rows = tempDiv.querySelectorAll('tr');
+         for (var i = 0; i < rows.length; i++) {
+             var td = rows[i].querySelector('td.visible-with-data');
+             var key = td ? td.id : '';
+             if (td && td.classList.contains('visible-with-data') && feature.properties[key] == null) {
+                 rows[i].parentNode.removeChild(rows[i]);
+             }
+         }
+         return tempDiv.innerHTML;
+        }
+        document.querySelector(".leaflet-popup-pane").addEventListener("load", function(event) {
+          var tagName = event.target.tagName,
+            popup = map._popup;
+          // Also check if flag is already set.
+          if (tagName === "IMG" && popup && !popup._updated) {
+            popup._updated = true; // Set flag to prevent looping.
+            popup.update();
+          }
+        }, true);
+        L.control.locate({locateOptions: {maxZoom: 19}}).addTo(map);
+        var bounds_group = new L.featureGroup([]);
+        function setBounds() {
+        }
+        map.createPane('pane_GoogleSatellite_0');
+        map.getPane('pane_GoogleSatellite_0').style.zIndex = 400;
+        var layer_GoogleSatellite_0 = L.tileLayer('https://mt1.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
+            pane: 'pane_GoogleSatellite_0',
+            opacity: 1.0,
+            attribution: '<a href="https://www.google.at/permissions/geoguidelines/attr-guide.html">Map data ©2015 Google</a>',
+            minZoom: 1,
+            maxZoom: 28,
+            minNativeZoom: 0,
+            maxNativeZoom: 20
+        });
+        layer_GoogleSatellite_0;
+        map.addLayer(layer_GoogleSatellite_0);
+        function pop_Epi_Hlaingtharyar_mok_1(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    for (var i in e.target._eventParents) {
+                        if (typeof e.target._eventParents[i].resetStyle === 'function') {
+                            e.target._eventParents[i].resetStyle(e.target);
+                        }
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['EPI_ID'] !== null ? autolinker.link(feature.properties['EPI_ID'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['EPI_N_MM'] !== null ? autolinker.link(feature.properties['EPI_N_MM'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['EPI_T_EN'] !== null ? autolinker.link(feature.properties['EPI_T_EN'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['IMM_S'] !== null ? autolinker.link(feature.properties['IMM_S'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['TS_C'] !== null ? autolinker.link(feature.properties['TS_C'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['TS_N_EN'] !== null ? autolinker.link(feature.properties['TS_N_EN'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['CT_C'] !== null ? autolinker.link(feature.properties['CT_C'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['VW_C'] !== null ? autolinker.link(feature.properties['VW_C'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['VW_T'] !== null ? autolinker.link(feature.properties['VW_T'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['VI_C'] !== null ? autolinker.link(feature.properties['VI_C'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['HF_L1_C'] !== null ? autolinker.link(feature.properties['HF_L1_C'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['HF_L1_T'] !== null ? autolinker.link(feature.properties['HF_L1_T'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['U5'] !== null ? autolinker.link(feature.properties['U5'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['DisPop'] !== null ? autolinker.link(feature.properties['DisPop'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            layer.bindPopup(popupContent, {maxHeight: 400});
+            var popup = layer.getPopup();
+            var content = popup.getContent();
+            var updatedContent = removeEmptyRowsFromPopupContent(content, feature);
+            popup.setContent(updatedContent);
+        }
 
-    <script>
-         let map = L.map('map').setView([37.09024, -95.712891], 5);
+        function style_Epi_Hlaingtharyar_mok_1_0(feature) {
+            switch(String(feature.properties['EPI_T_EN'])) {
+                case 'Army':
+                    return {
+                pane: 'pane_Epi_Hlaingtharyar_mok_1',
+                opacity: 1,
+                color: 'rgba(35,35,35,0.5820000000000001)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(231,123,93,0.5820000000000001)',
+                interactive: true,
+            }
+                    break;
+                case 'Other settlement':
+                    return {
+                pane: 'pane_Epi_Hlaingtharyar_mok_1',
+                opacity: 1,
+                color: 'rgba(35,35,35,0.5820000000000001)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(186,232,19,0.5820000000000001)',
+                interactive: true,
+            }
+                    break;
+                case 'Village':
+                    return {
+                pane: 'pane_Epi_Hlaingtharyar_mok_1',
+                opacity: 1,
+                color: 'rgba(35,35,35,0.5820000000000001)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(217,112,194,0.5820000000000001)',
+                interactive: true,
+            }
+                    break;
+                case 'Ward':
+                    return {
+                pane: 'pane_Epi_Hlaingtharyar_mok_1',
+                opacity: 1,
+                color: 'rgba(35,35,35,0.5820000000000001)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(121,232,143,0.5820000000000001)',
+                interactive: true,
+            }
+                    break;
+                case 'Workers settlement':
+                    return {
+                pane: 'pane_Epi_Hlaingtharyar_mok_1',
+                opacity: 1,
+                color: 'rgba(35,35,35,0.5820000000000001)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(135,210,229,0.5820000000000001)',
+                interactive: true,
+            }
+                    break;
+                default:
+                    return {
+                pane: 'pane_Epi_Hlaingtharyar_mok_1',
+                opacity: 1,
+                color: 'rgba(35,35,35,0.5820000000000001)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(138,119,207,0.5820000000000001)',
+                interactive: true,
+            }
+                    break;
+            }
+        }
+        map.createPane('pane_Epi_Hlaingtharyar_mok_1');
+        map.getPane('pane_Epi_Hlaingtharyar_mok_1').style.zIndex = 401;
+        map.getPane('pane_Epi_Hlaingtharyar_mok_1').style['mix-blend-mode'] = 'normal';
+        var layer_Epi_Hlaingtharyar_mok_1 = new L.geoJson(json_Epi_Hlaingtharyar_mok_1, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_Epi_Hlaingtharyar_mok_1',
+            layerName: 'layer_Epi_Hlaingtharyar_mok_1',
+            pane: 'pane_Epi_Hlaingtharyar_mok_1',
+            onEachFeature: pop_Epi_Hlaingtharyar_mok_1,
+            style: style_Epi_Hlaingtharyar_mok_1_0,
+        });
+        bounds_group.addLayer(layer_Epi_Hlaingtharyar_mok_1);
+        map.addLayer(layer_Epi_Hlaingtharyar_mok_1);
+        function pop_HF_Hlaingtharyar_2(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    for (var i in e.target._eventParents) {
+                        if (typeof e.target._eventParents[i].resetStyle === 'function') {
+                            e.target._eventParents[i].resetStyle(e.target);
+                        }
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['HF_ID'] !== null ? autolinker.link(feature.properties['HF_ID'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['HF_N_EN'] !== null ? autolinker.link(feature.properties['HF_N_EN'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['HF_T_EN'] !== null ? autolinker.link(feature.properties['HF_T_EN'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['TS_C'] !== null ? autolinker.link(feature.properties['TS_C'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['TS_N_EN'] !== null ? autolinker.link(feature.properties['TS_N_EN'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['LAT'] !== null ? autolinker.link(feature.properties['LAT'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['LONG'] !== null ? autolinker.link(feature.properties['LONG'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['Raster'] !== null ? autolinker.link(feature.properties['Raster'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            layer.bindPopup(popupContent, {maxHeight: 400});
+            var popup = layer.getPopup();
+            var content = popup.getContent();
+            var updatedContent = removeEmptyRowsFromPopupContent(content, feature);
+            popup.setContent(updatedContent);
+        }
 
-        L.tileLayer('https://api.mapbox.com/styles/v1/{username}/{style_id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-            username: 'setkhaing',
-            style_id: 'clvxuxs6702c201oc4nu2hdq9',
-            accessToken: 'pk.eyJ1Ijoic2V0a2hhaW5nIiwiYSI6ImNqNTUxaTB6OTA3NXMyd3VnOTEyaGx3OHcifQ.iDkQO3jCowF5wjMG93eRuw',
-            attribution: '&copy; <a href="https://www.mapbox.com/about/maps/">Mapbox</a>'
-    }).addTo(map);
-    
-
-    </script>
-</body>
+        function style_HF_Hlaingtharyar_2_0() {
+            return {
+                pane: 'pane_HF_Hlaingtharyar_2',
+                radius: 4.0,
+                opacity: 1,
+                color: 'rgba(35,35,35,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1,
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(229,182,54,1.0)',
+                interactive: true,
+            }
+        }
+        map.createPane('pane_HF_Hlaingtharyar_2');
+        map.getPane('pane_HF_Hlaingtharyar_2').style.zIndex = 402;
+        map.getPane('pane_HF_Hlaingtharyar_2').style['mix-blend-mode'] = 'normal';
+        var layer_HF_Hlaingtharyar_2 = new L.geoJson(json_HF_Hlaingtharyar_2, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_HF_Hlaingtharyar_2',
+            layerName: 'layer_HF_Hlaingtharyar_2',
+            pane: 'pane_HF_Hlaingtharyar_2',
+            onEachFeature: pop_HF_Hlaingtharyar_2,
+            pointToLayer: function (feature, latlng) {
+                var context = {
+                    feature: feature,
+                    variables: {}
+                };
+                return L.shapeMarker(latlng, style_HF_Hlaingtharyar_2_0(feature));
+            },
+        });
+        bounds_group.addLayer(layer_HF_Hlaingtharyar_2);
+        map.addLayer(layer_HF_Hlaingtharyar_2);
+        setBounds();
+        </script>
+    </body>
 </html>
-
